feat(config): 添加 database.mysql.dsn 配置

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -16,4 +16,4 @@ log:
 
 database:
   mysql:
-    dsn: "root:PaiSmart2025@tcp(127.0.0.1:3307)/PaiSmart?parseTime=True"
+    dsn: "root:PaiSmart2025@tcp(127.0.0.1:3307)/paismart_v2?parseTime=True"
