feat: add Redis client initialization and configuration
- Add pkg/database/redis.go with InitRedis()
- Add RedisConfig struct to config (addr, password, db)
- Add redis section to config.yaml (127.0.0.1:6379, db=1)
- Add go-redis/redis/v8 dependency

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -17,6 +17,10 @@ log:
 database:
   mysql:
     dsn: "root:PaiSmart2025@tcp(127.0.0.1:3307)/paismart_v2?parseTime=True"
+  redis: 
+    addr: "127.0.0.1:6379"
+    password: ""
+    db: 1
 
 jwt:
   secret: "PXrQbuCwXwOZzkML/Vm2S5rSwt1iybvmKtGDzVEu+Hc="
